One more commit

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,13 +24,13 @@
     "@nestjs/mongoose": "^6.0.0",
     "@nestjs/passport": "6.0.0",
     "@types/bcryptjs": "2.4.2",
+    "@types/mongoose": "5.3.25",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.2.0",
     "class-validator": "0.9.1",
     "mongoose": "^5.4.21",
     "passport": "0.4.0",
     "passport-http-bearer": "1.0.1",
-    "passport-local": "1.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
